[gd_scene load_steps=10 format=3 uid="uid://ccy4uqqmuum3u"]

[ext_resource type="Script" path="res://UI/Sidebar.gd" id="1_u8r1p"]
[ext_resource type="Script" path="res://UI/Editor.gd" id="2_8makj"]
[ext_resource type="Script" path="res://UI/Shop.gd" id="2_e2rvp"]
[ext_resource type="PackedScene" uid="uid://dxbg2v4enxere" path="res://Towers/Icons/towericon.tscn" id="3_ef7b5"]
[ext_resource type="Texture2D" uid="uid://ktr5tafdr0cf" path="res://Assets/Barricade/Barricade.png" id="4_r6ywg"]
[ext_resource type="PackedScene" uid="uid://chrqx6on3cmkc" path="res://Towers/Icons/sawicon.tscn" id="5_t4ebf"]
[ext_resource type="Script" path="res://UI/CurreencyValue.gd" id="7_h37x7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5354"]
size = Vector2(174, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gxv3"]
size = Vector2(748, 103.5)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_right = -768.0
offset_bottom = -434.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.667, 1.667)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(87, 324)
shape = SubResource("RectangleShape2D_h5354")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(548, 52.25)
shape = SubResource("RectangleShape2D_6gxv3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 175.0
offset_bottom = 648.0

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 922.0
offset_top = 1.0
offset_right = 1025.0
offset_bottom = 748.0
rotation = 1.57079

[node name="Sidebar" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 6.0
offset_right = 171.0
offset_bottom = 645.0
script = ExtResource("1_u8r1p")

[node name="Inspector" type="VBoxContainer" parent="Sidebar"]
layout_mode = 2

[node name="Label" type="Label" parent="Sidebar/Inspector"]
layout_mode = 2
text = "Inspector"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Sidebar/Inspector"]
layout_mode = 2

[node name="DPSContainer" type="HBoxContainer" parent="Sidebar/Inspector"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Inspector/DPSContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage"

[node name="DPSBox" type="Label" parent="Sidebar/Inspector/DPSContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "null"
horizontal_alignment = 1

[node name="KilledContainer" type="HBoxContainer" parent="Sidebar/Inspector"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Inspector/KilledContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Killed"

[node name="KilledBox" type="Label" parent="Sidebar/Inspector/KilledContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "null"
horizontal_alignment = 1

[node name="HealthContainer" type="HBoxContainer" parent="Sidebar/Inspector"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Inspector/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Health"

[node name="HealthBox" type="Label" parent="Sidebar/Inspector/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "null"
horizontal_alignment = 1

[node name="CooldownContainer" type="HBoxContainer" parent="Sidebar/Inspector"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Inspector/CooldownContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cooldown"

[node name="CoolBox" type="Label" parent="Sidebar/Inspector/CooldownContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "null"
horizontal_alignment = 1

[node name="TimeContainer" type="HBoxContainer" parent="Sidebar/Inspector"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Inspector/TimeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time
"

[node name="TimeBox" type="Label" parent="Sidebar/Inspector/TimeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "null"
horizontal_alignment = 1

[node name="Editor" type="VBoxContainer" parent="Sidebar"]
layout_mode = 2
script = ExtResource("2_8makj")

[node name="Label" type="Label" parent="Sidebar/Editor"]
layout_mode = 2
text = "Editor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Sidebar/Editor"]
layout_mode = 2

[node name="DamageContainer" type="HBoxContainer" parent="Sidebar/Editor"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Editor/DamageContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage"

[node name="DamageBox" type="SpinBox" parent="Sidebar/Editor/DamageContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1
update_on_text_changed = true

[node name="RangeContainer" type="HBoxContainer" parent="Sidebar/Editor"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Editor/RangeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Range"

[node name="RangeBox" type="SpinBox" parent="Sidebar/Editor/RangeContainer"]
layout_mode = 2
value = 10.0
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="HealthContainer" type="HBoxContainer" parent="Sidebar/Editor"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Editor/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Health"

[node name="Healthbox" type="SpinBox" parent="Sidebar/Editor/HealthContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1
update_on_text_changed = true

[node name="CooldownContainer" type="HBoxContainer" parent="Sidebar/Editor"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Editor/CooldownContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cooldown"

[node name="CooldownBox" type="SpinBox" parent="Sidebar/Editor/CooldownContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1
update_on_text_changed = true
suffix = "s"

[node name="ChargeContainer" type="HBoxContainer" parent="Sidebar/Editor"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Sidebar/Editor/ChargeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Charge
"

[node name="ChargeBox" type="SpinBox" parent="Sidebar/Editor/ChargeContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
alignment = 1
update_on_text_changed = true

[node name="HBoxContainer" type="HBoxContainer" parent="Sidebar/Editor"]
layout_mode = 2

[node name="Button" type="Button" parent="Sidebar/Editor/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Price"

[node name="Outliner" type="VBoxContainer" parent="Sidebar"]
layout_mode = 2

[node name="Label" type="Label" parent="Sidebar/Outliner"]
layout_mode = 2
text = "Outliner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Sidebar/Outliner"]
layout_mode = 2

[node name="Enemy" type="Button" parent="Sidebar/Outliner"]
layout_mode = 2
text = "Summon Enemies"

[node name="Shop" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 177.0
offset_right = 1121.0
offset_bottom = 98.0
script = ExtResource("2_e2rvp")

[node name="MarginContainer" type="MarginContainer" parent="Shop"]
layout_mode = 2

[node name="TowerButton" type="Button" parent="Shop"]
layout_mode = 2
text = "                 "

[node name="Tower" parent="Shop/TowerButton" instance=ExtResource("3_ef7b5")]
position = Vector2(39, 49)
scale = Vector2(0.8, 0.8)

[node name="BarricadeButton" type="Button" parent="Shop"]
layout_mode = 2
text = "                 "

[node name="Sprite2D" type="Sprite2D" parent="Shop/BarricadeButton"]
position = Vector2(44, 45)
rotation = 0.825269
scale = Vector2(0.08, 0.08)
texture = ExtResource("4_r6ywg")

[node name="SawButton" type="Button" parent="Shop"]
layout_mode = 2
text = "                 "

[node name="Tower2" parent="Shop/SawButton" instance=ExtResource("5_t4ebf")]
position = Vector2(40, 49)
scale = Vector2(0.8, 0.8)

[node name="CurrencyName" type="Label" parent="Shop"]
layout_mode = 2
size_flags_horizontal = 10
text = "Moneyz: "

[node name="CurreencyValue" type="Label" parent="Shop"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
script = ExtResource("7_h37x7")

[connection signal="value_changed" from="Sidebar/Editor/DamageContainer/DamageBox" to="Sidebar/Editor" method="_on_damage_box_value_changed"]
[connection signal="value_changed" from="Sidebar/Editor/RangeContainer/RangeBox" to="Sidebar/Editor" method="_on_range_box_value_changed"]
[connection signal="value_changed" from="Sidebar/Editor/HealthContainer/Healthbox" to="Sidebar/Editor" method="_on_healthbox_value_changed"]
[connection signal="value_changed" from="Sidebar/Editor/CooldownContainer/CooldownBox" to="Sidebar/Editor" method="_on_cooldown_box_value_changed"]
[connection signal="value_changed" from="Sidebar/Editor/ChargeContainer/ChargeBox" to="Sidebar/Editor" method="_on_charge_box_value_changed"]
[connection signal="pressed" from="Sidebar/Editor/HBoxContainer/Button" to="Sidebar/Editor" method="_on_button_pressed"]
[connection signal="pressed" from="Sidebar/Outliner/Enemy" to="Shop" method="_on_enemy_pressed"]
[connection signal="pressed" from="Shop/TowerButton" to="Shop" method="_on_tower_button_pressed"]
[connection signal="pressed" from="Shop/BarricadeButton" to="Shop" method="_on_barricade_button_pressed"]
[connection signal="pressed" from="Shop/SawButton" to="Shop" method="_on_saw_button_pressed"]
